--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,6 +1,6 @@
-$test_border: none;
+$test_border: 1px solid black;
 $arrow_top_margin: 15rem;
 $arrow_side_margin: 25%;
 $arrow_opacity: 0.7;
 $background-color:white;
-$z-index-fields: -1;
+
